Fix some spacing issues

--- a/themes/devan/source/css/_partial/article.styl
+++ b/themes/devan/source/css/_partial/article.styl
@@ -4,6 +4,7 @@
 .article-inner
   @extend $block
   overflow: hidden
+  padding-bottom: 1.6em
 
 .article-date
   float: left
@@ -19,8 +20,6 @@
 
 .article-title
   text-decoration: none
-  font-size: 2em
-  color: color-default
   line-height: line-height-title
   transition: color 0.2s
   a&:hover
@@ -97,7 +96,6 @@
 
 #article-nav
   position: relative
-  margin-top: 20px;
 
 .article-nav-link-wrap
   text-decoration: none
