--- a/themes/devan/source/css/_partial/highlight.styl
+++ b/themes/devan/source/css/_partial/highlight.styl
@@ -14,7 +14,7 @@ highlight-purple = #cc99cc
 
 $code-block
   background: highlight-background
-  margin: 0 0
+  margin: 1.6em 0
   padding: 15px article-padding
   overflow: auto
   color: highlight-foreground
