--- a/themes/devan/source/css/style.styl
+++ b/themes/devan/source/css/style.styl
@@ -24,6 +24,15 @@ a
   &:hover
     text-decoration: underline
 
+h1
+  font-size: 2em
+h2
+  font-size 1.5em
+h3
+  font-size 1.17em
+h4
+  font-size 1em
+
 .outer
   max-width: 900px
   margin: 0 auto
